Firebase複数サイト設定

--- a/firebase-cms/.firebaserc
+++ b/firebase-cms/.firebaserc
@@ -4,6 +4,9 @@
       "hosting": {
         "front": [
           "ng-prerender"
+        ],
+        "manage": [
+          "ng-prerender-manage"
         ]
       }
     }
