ライブラリプロジェクト追加

--- a/firebase-cms/angular.json
+++ b/firebase-cms/angular.json
@@ -248,6 +248,46 @@
           }
         }
       }
+    },
+    "firebase-cms-lib": {
+      "projectType": "library",
+      "root": "projects/firebase-cms-lib",
+      "sourceRoot": "projects/firebase-cms-lib/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/firebase-cms-lib/tsconfig.lib.json",
+            "project": "projects/firebase-cms-lib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/firebase-cms-lib/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/firebase-cms-lib/src/test.ts",
+            "tsConfig": "projects/firebase-cms-lib/tsconfig.spec.json",
+            "karmaConfig": "projects/firebase-cms-lib/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/firebase-cms-lib/tsconfig.lib.json",
+              "projects/firebase-cms-lib/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
