--- a/firebase-cms/angular.json
+++ b/firebase-cms/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/front",
+            "outputPath": "dist/front/browser",
             "index": "projects/front/src/index.html",
             "main": "projects/front/src/main.ts",
             "polyfills": "projects/front/src/polyfills.ts",
@@ -103,7 +103,8 @@
             "tsConfig": [
               "projects/front/tsconfig.app.json",
               "projects/front/tsconfig.spec.json",
-              "projects/front/e2e/tsconfig.json"
+              "projects/front/e2e/tsconfig.json",
+              "projects/front/tsconfig.server.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -125,6 +126,53 @@
         "deploy": {
           "builder": "@angular/fire:deploy",
           "options": {}
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/front/server",
+            "main": "projects/front/server.ts",
+            "tsConfig": "projects/front/tsconfig.server.json"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "projects/front/src/environments/environment.ts",
+                  "with": "projects/front/src/environments/environment.prod.ts"
+                }
+              ],
+              "sourceMap": false,
+              "optimization": true
+            }
+          }
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "options": {
+            "browserTarget": "front:build",
+            "serverTarget": "front:server"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "front:build:production",
+              "serverTarget": "front:server:production"
+            }
+          }
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "browserTarget": "front:build:production",
+            "serverTarget": "front:server:production",
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {}
+          }
         }
       }
     },
