--- a/firebase-cms/package.json
+++ b/firebase-cms/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run front:serve-ssr",
+    "serve:ssr": "node dist/front/server/main.js",
+    "build:ssr": "ng build --prod && ng run front:server:production",
+    "prerender": "ng run front:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,17 +23,22 @@
     "@angular/forms": "~10.1.6",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
+    "@angular/platform-server": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@nguniversal/express-engine": "^10.1.0",
+    "express": "^4.15.2",
+    "firebase": "^7.13.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
     "@types/node": "^12.11.1",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^6.0.0",
