--- a/firebase-cms/functions/package.json
+++ b/firebase-cms/functions/package.json
@@ -14,16 +14,18 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/cloudbuild": "^2.0.3",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
+    "@types/node": "^14.11.10",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.22.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "typescript": "^3.8.0"
   },
   "private": true
 }
