--- a/firebase-cms/firebase.json
+++ b/firebase-cms/firebase.json
@@ -2,7 +2,7 @@
   "hosting": [
     {
       "target": "front",
-      "public": "dist/front",
+      "public": "dist/front/browser",
       "ignore": [
         "**/.*"
       ],
@@ -48,5 +48,11 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
+  }
 }
